--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE
 include README.rst
 recursive-include restfuloauth2/oauth/templates *
+recursive-include restfuloauth2/oauth/static *
 recursive-include docs *
