--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,8 @@
 test=pytest
 
 [tool:pytest]
-addopts = --verbose --cov-report term --cov-report html --cov=restfuloauth2 tests/test_restfuloauth2.py
+addopts = --verbose --cov-report term --cov-report html --cov=restfuloauth2
+  tests/test_restfuloauth2.py
+
+[pep8]
+exclude = venv,.eggs
