Changed package set-up file and dependency list.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
 [aliases]
-test=pytest
+test = pytest
 
 [tool:pytest]
 addopts = --verbose --cov-report term --cov-report html --cov=restfuloauth2
   tests/test_restfuloauth2.py
+  tests/test_dummy.py
 
 [pep8]
-exclude = venv,.eggs
+exclude = .eggs,migrations
